Ajout du logo team racket

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,12 @@
-*{
-    background-color: gray;
+
+
+img{
+    width: auto;
+    height: auto;
+}
+
+h1{
+    color: red;
+    text-align: center;
+    font-size: 5rem;
 }
