Intégration api et affichage aléatoire des pokemons

--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -1,2 +1,14 @@
-<p>carte works!</p>
 
+
+
+<div class="pokemonCard">
+
+<div *ngFor="let test of pokemonData.slice(random,random2)">
+<img src="{{test.images.small}}" alt="image du pokemon">
+<p>Nom du pokemon : {{test.name}}</p>
+<p>Point de vie du pokemon : {{test.hp}}</p>
+<p>niveau du pokemon : {{test.level}}</p>
+
+</div>
+
+</div>
