--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -2,3 +2,16 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.pokemon{
+    width: 30%;
+    margin: auto;
+    }
+
+.pokemon img{
+    width: 100%;
+}
+
+.pokemon :hover{
+     scale: 130%;
+}
