--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -3,12 +3,12 @@
 
 <div class="pokemonCard">
 
-<div *ngFor="let test of pokemonData.slice(random,random2)">
+<div class="pokemon" *ngFor="let test of pokemonData.slice(random,random2)">
 <img src="{{test.images.small}}" alt="image du pokemon">
-<p>Nom du pokemon : {{test.name}}</p>
+<!--<p>Nom du pokemon : {{test.name}}</p>
 <p>Point de vie du pokemon : {{test.hp}}</p>
 <p>niveau du pokemon : {{test.level}}</p>
-
+</-->
 </div>
 
 </div>
