--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-header class="header"></app-header>
-<app-nav class="nav"></app-nav>
+<div class="recherche">
+    <input type="text" [(ngModel)]="search">
+    <button>search</button>
+    </div>
+    
 <app-carte class="carte"></app-carte>
 
 
