--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -1,13 +1,8 @@
-
+<div class="pokemonGrid">
 <div class="pokemonCard" *ngFor="let test of pokemonData.slice(random,random2)">
-
-    
-
-    <img src="{{test.image}}/low.jpg" alt="">
-
-
+    <img src="{{test.image}}/high.jpg" alt="">
 </div>
-
+</div>
 
 
 
