mise en place des routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header class="header"></app-header>
 <app-nav class="nav"></app-nav>
 <app-carte class="carte"></app-carte>
+<router-outlet></router-outlet>
 
-
-
+<a routerLink="/Teamdev">Page de la team raquette</a>
