--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -1,10 +1,15 @@
-
 <div class="recherche" *ngIf="search !== ''">
+    <div class="nombreResultat">
+        <h1> Nombre de résultat disponible : {{length}}</h1>
+    </div>
     <section class="Card"  *ngFor="let recherche of pokemonsearch.slice(0,nombre)">
         <img src="{{recherche.image}}/low.jpg" alt="">
         
     </section>
-    <button (click)="test123()"> afficher</button>
+    <div class="buttonRecherche">
+        <button (click)="incrementNumbers()"> afficher plus</button>
+        <button (click)="moins()"> afficher moins</button>
+    </div>
 </div>
 
 
@@ -13,7 +18,7 @@
 
 <div class="pokemoncard" *ngIf="search === '' ">
     <section class="Card"  *ngFor="let test of pokemonData.slice(random,random2)">
-        <img src="{{test.image}}/low.jpg" alt="">
+        <img (click)="image()" src="{{test.image}}/low.jpg" alt="">
     </section>
 </div>
 
