changes carte component css and add animation folder and ts

--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -1,8 +1,59 @@
-.pokemonCard:hover img{
-    scale: 120%;
+.card:hover img{
+    scale: 125%;
 }
-.pokemonCard{
+/* .card{
     margin: 0.3em;
-    max-width: 30%;
+    width: 25%;
     margin: auto;
 }
+
+.pokemonCard{
+    display: flex;
+flex-wrap: wrap;
+} */
+
+.recherche {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+  }
+  
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
+  .pokemonCard {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .pokemonCard .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 12.5rem;
+    height: 18.75rem;
+  }
+  
+  .pokemonCard .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
