mise en forme des coposant

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,6 @@
-<app-header class="header"></app-header>
-<div class="recherche">
-    <input type="text" [(ngModel)]="search" (keypress)="init()" (keyup)="recherche()" >
-    </div>
-
-
-    
-<app-carte
- [search]="search"
- [pokemonsearch]="pokemonsearch" 
- [length]="length"
- class="carte"></app-carte>
+<app-header class="header"></app-header>    
+<app-carte></app-carte>
+<app-footer></app-footer>
 
 
 
