--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -1,4 +1,9 @@
-<div class="recherche" *ngIf="search !== ''">
+<div class="recherche">
+    <input type="text" [(ngModel)]="search" (keypress)="init()" (keyup)="recherche()" >
+    </div>
+
+
+<div class="search" *ngIf="search !== ''">
     <div class="nombreResultat">
         <h1> Nombre de résultat disponible : {{length}}</h1>
     </div>
@@ -18,7 +23,7 @@
 
 <div class="pokemoncard" *ngIf="search === '' ">
     <section class="Card"  *ngFor="let test of pokemonData.slice(random,random2)">
-        <img (click)="image()" src="{{test.image}}/low.jpg" alt="">
+        <img src="{{test.image}}/low.jpg" alt="">
     </section>
 </div>
 
