--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -8,15 +8,27 @@
 }
 .pokemoncard{
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
-    margin: auto;
-    margin-top: 2rem;
 }
-.Card{
-    margin: 0.3em;
-    max-width: 30%;
-    margin: auto;
-}
+.Card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: auto;
+    height: auto;
+    margin: 0.5rem;
+    border-radius: 10%;
+    box-shadow: 0 0 5px rgb(212, 219, 34);
+
+  }
+  
+  .Card img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10%;
+    object-fit: cover;
+  }
 
 .search{
     display: flex;
