--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,5 @@
-<div>
-    <img src="../assets/img/logo_Team_Racket.png" alt="logo">
-    </div>
+<a routerLink="">
+  <div>
+    <img src="../assets/img/logo_Team_Racket.png" alt="logo" />
+  </div>
+</a>
