--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<app-header class="header"></app-header>    
-<app-carte></app-carte>
+<app-header class="header"></app-header>
+
+<router-outlet></router-outlet>
+
 <app-footer></app-footer>
-
-
-
