--- a/src/app/dev-team/dev-team.component.html
+++ b/src/app/dev-team/dev-team.component.html
@@ -8,10 +8,18 @@
 />
 
 <div class="body">
-  <div class="cell"><img src="../assets/img/james.jpeg" alt="logo" /></div>
-  <div class="cell"><img src="../assets/img/images.jpeg" alt="logo" /></div>
-  <div class="cell"><img src="../assets/img/team-rocket-3.jpeg" /></div>
-  <div class="cell"><img src="../assets/img/team-rocket-4.jpeg" /></div>
-</div>
+  <div class="cell">
+    <img src="{{ teamDev[0].image }}/low.jpg" alt="logo" />
+  </div>
+  <div class="cell">
+    <img src="{{ teamDev[1].image }}/low.jpg" alt="logo" />
+  </div>
+  <div class="cell">
+    <img src="{{ teamDev[2].image }}/low.jpg" alt="logo" />
+  </div>
+  <div class="cell">
+    <img src="{{ teamDev[2].image }}/low.jpg" alt="logo" />
+  </div>
 
-<button routerLink="/carte">Retourner à l' accueil</button>
+  <button routerLink="/carte">Retourner à l' accueil</button>
+</div>
