--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -18,24 +18,24 @@ flex-wrap: wrap;
 .recherche {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-  }
-  
-  .Card {
+    padding-left: 2rem;
+}
+.Card {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
+    margin: 0.5rem;
+    border-radius: 10%;
   }
   
   .Card img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    border-radius: 10%;
+    object-fit: cover;
+    box-shadow: 0 0 5px rgb(212, 219, 34);
   }
   
   .pokemoncard {
@@ -50,7 +50,7 @@ flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 12.5rem;
+    width: 13.5rem;
     height: 18.75rem;
   }
   
@@ -96,3 +96,12 @@ height: 20px;
     border: solid black;
 }
 
+.inputRecherche{
+width: 55%;
+}
+
+.Card:hover{
+ transform: scale3d(1.4, 1.4, 1.4);
+    transition: 0.5s;
+    box-shadow: 0 0 1px rgb(212, 219, 34);
+}
