--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,13 +1,11 @@
-
+div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
 img{
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
-}
-
-h1{
-    color: red;
-    text-align: center;
-    font-size: 5rem;
 }
