--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -7,8 +7,8 @@
     <div class="nombreResultat">
         <h1> Nombre de résultat disponible : {{length}}</h1>
     </div>
-    <section class="Card"  *ngFor="let recherche of pokemonsearch.slice(0,nombre)" >
-        <img src="{{recherche.image}}/low.jpg" alt="" [@flipIn]>
+    <section class="Card"  *ngFor="let recherche of pokemonsearch.slice(0,nombre); let i = index" >
+        <img (click)="carte(i)" src="{{recherche.image}}/low.jpg" alt="" [@flipIn]>
         
     </section>
     <div class="buttonRecherche" *ngIf="length > 20">
@@ -22,7 +22,7 @@
 
 
 <div class="pokemoncard" *ngIf="search === '' ">
-    <section class="Card" *ngFor="let test of pokemonData.slice(random,random2)" >
-        <img src="{{test.image}}/low.jpg" alt="" [@zoomIn] >
+    <section class="Card" *ngFor="let test of pokemonData.slice(random,random2); let i = index" >
+        <img (click)="carte(i)" src="{{test.image}}/low.jpg" alt="" [@zoomIn] >
     </section>
 </div>
