--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -12,7 +12,9 @@
         <h1> Nombre de résultat disponible : {{length}}</h1>
     </div>
     <section class="Card"  *ngFor="let recherche of pokemonsearch.slice(0,nombre); let i = index" >
-        <img (click)="carte(i)" src="{{recherche.image}}/low.jpg" alt="" [@flipIn]>
+        <img (click)="carteRecherche(i)" src="{{recherche.image}}/low.jpg" alt="" [@flipIn]>
+       
+        
         
     </section>
     <div class="buttonRecherche" *ngIf="length > 20">
@@ -25,7 +27,7 @@
 
 
 
-<div class="pokemoncard" *ngIf="search === '' ">
+<div routerLink="/pokemon" class="pokemoncard" *ngIf="search === '' ">
     <section class="Card" *ngFor="let test of pokemonData.slice(random,random2); let i = index" >
         <img (click)="carte(i)" src="{{test.image}}/low.jpg" alt="" [@zoomIn] >
     </section>
