--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -7,6 +7,9 @@
   />
 </div>
 
+<div class="random" [hidden]="randomToClick">
+
+
 <div class="search" *ngIf="search !== ''">
     <div class="nombreResultat">
         <h1> Nombre de résultat disponible : {{length}}</h1>
@@ -27,9 +30,33 @@
 
 
 
-<div routerLink="/pokemon" class="pokemoncard" *ngIf="search === '' ">
+<div class="pokemoncard" *ngIf="search === '' ">
     <section class="Card" *ngFor="let test of pokemonData.slice(random,random2); let i = index" >
         <img (click)="carte(i)" src="{{test.image}}/low.jpg" alt="" [@zoomIn] >
     </section>
+
+</div>
+
+</div>
+
+<div class="ToClick" [hidden]="toClick">
+
+<h1> <b> Nom :</b> {{infoAffichage.name}} </h1>
+<img (click)="carteToClick()" src="{{image}}/low.jpg" alt="">
+<p *ngIf="infoAffichage.description"> <b>Déscription : </b> {{infoAffichage.description}} </p>
+<p *ngIf="infoAffichage.evolveFrom"><b> L'évolution de </b> {{infoAffichage.evolveFrom}} </p>
+<p *ngIf="infoAffichage.hp"><b> HP du pokemon :</b> {{infoAffichage.hp}} </p>
+<p *ngIf="infoAffichage.effect"> <b>Effet :</b> {{infoAffichage.effect}} </p>
+<ul *ngFor="let types of infoAffichageType">
+    <li *ngIf="types"> <b> type du pokemon :</b> {{types}} </li>
+</ul>
+<div class="attacks">
+    <ul *ngFor="let attacks of infoAffichageAttacks">
+        <li *ngIf="attacks.name"> <b> Attaques :</b> {{attacks.name}}</li>
+        <li *ngIf="attacks.damage" > <b>Dommages :</b> {{attacks.damage}} </li>
+        <li *ngIf="attacks.effect"> <b>Effet :</b> {{attacks.effect}}</li>
+
+    </ul>
+</div>
 
 </div>
