--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <div routerLink="/carte">
-  <img src="../assets/img/logo_Team_Racket.png" alt="logo" />
+  <img (click)="returnToRandom()" src="../assets/img/logo_Team_Racket.png" alt="logo" />
 </div>
