--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,12 @@
 
-
-
-<a routerLink="/dev-team">
-  <div>
-    <img src="../assets/img/Team-Dev.jpg" alt="logo" />
+<section class="basdepage">
+<div class="img1">
+    <a href="/formulaire"><img src="../assets/img/bouton.png" alt="logo"></a>
+</div>
+<div>
+<a href="/dev-team"><img src="../assets/img/Team-Dev.png" alt="logo"></a>
+</div>
+<div class="img2">
+  <a href="/formulaire"><img src="../assets/img/bouton.png" alt="logo"></a>
   </div>
-</a>
-
+</section>
