--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
+body {
+    background-image: url('../src/assets/img/fond-Desktop.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
