modif formulaire et css

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,6 +7,6 @@
 <a href="/dev-team"><img src="../assets/img/Team-Dev.png" alt="logo"></a>
 </div>
 <div class="img2">
-  <a href="/formulaire"><img src="../assets/img/bouton.png" alt="logo"></a>
+  <a href="/pika"><img src="../assets/img/Pika.png" alt="logo"></a>
   </div>
 </section>
