--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -25,7 +25,7 @@
         <h1> Nombre de résultat disponible : {{length}}</h1>
     </div>
     <section class="Card"  *ngFor="let recherche of pokemonsearch.slice(0,nombre); let i = index" >
-        <img (click)="carteRecherche(i)" src="{{recherche.image}}/low.jpg" alt="" [@flipIn]>
+        <img *ngIf="recherche.image" (click)="carteRecherche(i)" src="{{recherche.image}}/low.jpg" alt="" [@flipIn]>
        
         
         
