--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,6 +11,7 @@
       id="password"
       [(ngModel)]="password"
       name="password"
+      (keydown.enter)="login()"
       required
     />
   </div>
