--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -7,7 +7,7 @@
 }
 
 button {
-  background-color: #4CAF50;
+  background-color: #e55366;
   border: none;
   color: white;
   padding: 0.5vw 0.5vw;
@@ -28,7 +28,6 @@ button {
 .typesbar button:active{
     background-color: #3e4346;
 }
-
 
 .nombreResultat{
     display: flex;
@@ -164,4 +163,45 @@ width: 55%;
  transform: scale3d(1.4, 1.4, 1.4);
     transition: 0.5s;
     box-shadow: 0 0 1px rgb(212, 219, 34);
+}
+
+.ToClick{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h1{
+    background-color: #e55366;
+    border: none;
+    color: white;
+    padding: 1vw 1vw;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 5.5vh;
+    margin: 1vh 1vw;
+    cursor: pointer;
+    flex: 1;
+    height: auto;
+    width: auto;
+    border-radius: 15%;
+}
+
+.ToClick img{
+    width: 35%;
+    height: 35%;
+    border-radius: 10%;
+    object-fit: cover;
+    box-shadow: 0 0 5px rgb(212, 219, 34);
+}
+
+.pokemonDetails{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    width: 75%;
 }
