--- a/src/app/formulaire/formulaire.component.css
+++ b/src/app/formulaire/formulaire.component.css
@@ -2,9 +2,10 @@
 
 	div#pokedex
 	{
-		width: 750px;
-		margin: 50px auto 0 auto;
+		width: auto;
+		margin: auto;
     display: flex;
+	justify-content: center;
 	}
 
 	div#left
@@ -953,23 +954,14 @@
 
 }
 
-@media handheld and (orientation:portrait), (max-width:768px) {
+@media (max-width: 720px) {
 
 	div#pokedex
 	{
-		width: 400px;
-	}
-
-	div#logo
-	{
-		width: 281px;
-		height: 99px;
-		background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/200653/logo.png') no-repeat left top;
-		z-index: 1;
-
-		position: absolute;
-		top: 220px;
-		left: 30px;
+		width: auto;
+		margin: auto;
+    display: flex;
+	justify-content: center;
 	}
 
 	div#left
@@ -979,76 +971,12 @@
 		float: left;
 		position: relative;
 		z-index: 1;
-		margin: 0 auto;
 	}
 
-	div#curve1_left
-	{
-		width: 201px;
-		height: 85px;
-		background-color: #8b0000;
-		float: left;
-		padding: 15px 0 0 15px;
-
-		position: absolute;
-		top: 0;
-		left: 0;
-
-		box-shadow: 0 0 #5e0000;
-		-webkit-box-shadow: 0 0 #5e0000;
-		-moz-box-shadow: 0 0 #5e0000;
-		-o-box-shadow: 0 0 #5e0000;
-
-		border-bottom-right-radius: 85px 60px;
-		-webkit-border-bottom-right-radius: 85px 60px;
-		-moz-border-bottom-right-radius: 85px 60px;
-		-o-border-bottom-right-radius: 85px 60px;
-
-		border-top-left-radius: 30px;
-		-webkit-border-top-left-radius: 30px;
-		-moz-border-top-left-radius: 30px;
-		-o-border-top-left-radius: 30px;
-	}
-
-	div#bg_curve1_left
-	{
-		width: 400px;
-		height: 80px;
-		background-color: #8b0000;
-
-		box-shadow: -10px 9px #5e0000;
-		-webkit-box-shadow: -10px 9px #5e0000;
-		-moz-box-shadow: -10px 9px #5e0000;
-		-o-box-shadow: -10px 9px #5e0000;
-
-		border-top-left-radius: 30px;
-		-webkit-border-top-left-radius: 30px;
-		-moz-border-top-left-radius: 30px;
-		-o-border-top-left-radius: 30px;
-	}
-
-	div#right, div#screen, div#bigbluebutton, div#barbutton1, div#barbutton2, div#cross
+	div#right
 	{
 		display: none;
 	}
-
- 
-}
-
-input, textarea {
-	border-width: 0;
-  }
-
-.name, .surname, .mail, .phone, .message{
-	padding-left: 2rem;
-	padding-top: 10px;
 	
-}
 
-
-  
-::placeholder {
-  color: #000;
-  font-family: Arial, Helvetica, sans-serif;
- font-size: 15px;
 }
