--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,10 @@
 
 <section class="basdepage">
-<div class="img1">
+
+  <div class="img">
     <a href="/formulaire"><img src="../assets/img/bouton.png" alt="logo"></a>
-</div>
+    </div>
+
 <div>
 <a href="/dev-team"><img src="../assets/img/Team-Dev.png" alt="logo"></a>
 </div>
