--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -1,3 +1,6 @@
+<section class="espace">
+
+</section>
 <div id="pokedex">
     <div id="left">
       <div id="logo"></div>
@@ -39,11 +42,7 @@
         <div class="message">
             <label for="message"></label>
             <textarea id="message" formControlName="message" placeholder="Message :"></textarea>
-        </div>
-        <!-- <div> 
-            <br> 
-            <button type="submit">Envoyé</button> 
-        </div>   -->    
+        </div>    
             </form>
         </div>
         <div id="buttonbottomPicture"></div>
@@ -71,7 +70,7 @@
           <div id="midCircle"></div>
         </div>
         <div id="botcross">
-          <div id="downT"></div>
+          <div id="downT"></div> 
         </div>
       </div>
     </div>
@@ -99,7 +98,7 @@
       <div id="miniButtonGlass5"></div>
       <div id="barbutton3"></div>
       <div id="barbutton4"></div>
-      <div id="yellowBox1" (click)=submitMyform()>Envoyé</div>
+      <div id="yellowBox1" (click)=submitMyform()>Envoyer</div>
       <div id="yellowBox2"></div>
       <div id="bg_curve1_right"></div>
       <div id="bg_curve2_right"></div>
