--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -3,10 +3,17 @@
 
   <div class="typesbar">
     <button (click)="returnAleatoire()">Aléatoire</button>
-    <button *ngFor="let type of types; let i = index" (click)="selecteTypes(i)">
+    <div class="types-select">
+      <select (change)="selecteTypes($event.target)">
+        <option value="">Sélectionnez un type</option>
+        <option *ngFor="let type of types; let i = index" (click)="selecteTypes(i)">{{ type }}</option>
+      </select>
+    </div>
+    <button class="types-button" *ngFor="let type of types; let i = index" (click)="selecteTypes(i)">
       {{ type }}
     </button>
   </div>
+  
 </div>
 
 <div class="random" [hidden]="randomToClick">
@@ -53,7 +60,7 @@
 </div>
 
 <div class="ToClick" [hidden]="toClick">
-  <h1><b> Nom :</b> {{ infoAffichage.name }}</h1>
+  <div class="nom" *ngIf="infoAffichage.name"><b> Nom :</b> {{ infoAffichage.name }}</div>
   <img (click)="carteToClick()" src="{{ image }}/low.jpg" alt="" />
   <div class="pokemonDetails">
     <p *ngIf="infoAffichage.description">
@@ -75,7 +82,9 @@
       <ul *ngFor="let attacks of infoAffichageAttacks">
         <li *ngIf="attacks.name"><b> Attaques :</b> {{ attacks.name }}</li>
         <li *ngIf="attacks.damage"><b>Dommages :</b> {{ attacks.damage }}</li>
-        <li class="effect" *ngIf="attacks.effect"><b>Effet :</b> {{ attacks.effect }}</li>
+        <li class="effect" *ngIf="attacks.effect">
+          <b>Effet :</b> {{ attacks.effect }}
+        </li>
       </ul>
     </div>
   </div>
