--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,12 +1,12 @@
 div{
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
-a{
-    max-width: 80%;
-    max-height: 80%;
-    object-fit: contain;
-    flex: 1;
-    margin-right: 10px;
+img{
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+object-fit: contain;
 }
