correction bug recherche

--- a/src/app/dev-team/dev-team.component.html
+++ b/src/app/dev-team/dev-team.component.html
@@ -9,16 +9,16 @@
 
 <div class="body">
   <div class="cell">
-    <img src="{{ teamDev[0].image }}/low.jpg" alt="logo" />
+    <img src="https://assets.tcgdex.net/fr/xy/xy1/115/low.jpg" alt="Olivier" />
   </div>
   <div class="cell">
-    <img src="{{ teamDev[1].image }}/low.jpg" alt="logo" />
+    <img src="https://assets.tcgdex.net/fr/bw/bw4/86/low.jpg" alt="Rachid" />
   </div>
   <div class="cell">
-    <img src="{{ teamDev[2].image }}/low.jpg" alt="logo" />
+    <img src="https://assets.tcgdex.net/fr/swsh/swsh8/241/low.jpg" alt="Damien" />
   </div>
   <div class="cell">
-    <img src="{{ teamDev[2].image }}/low.jpg" alt="logo" />
+    <img src="https://assets.tcgdex.net/fr/swsh/swsh2/154/low.jpg" alt="Omar" />
   </div>
 
   <button routerLink="/carte">Retourner à l' accueil</button>
