--- a/src/app/formulaire/formulaire.component.css
+++ b/src/app/formulaire/formulaire.component.css
@@ -1,5 +1,3 @@
-@media all {
-
 	div#pokedex
 	{
 		width: auto;
@@ -10,7 +8,7 @@
 
 	div#left
 	{
-		width: 400px;
+		width: 350px;
 		height: 500px;
 		float: left;
 		position: relative;
@@ -23,9 +21,8 @@
 		height: 500px;
 		float: left;
 		position: relative;
+		z-index: 1;
 	}
-
-
 
 	/* //// LEFT PART //// */
 
@@ -952,9 +949,8 @@
 		-o-box-shadow: 0 0 20px #ff6600 inset;
 	}
 
-}
 
-@media (max-width: 400px) {
+@media (min-width: 420px) {
 
 	div#pokedex
 	{
@@ -966,8 +962,8 @@
 
 	div#left
 	{
-		width: 400px;
-		height: 500px;
+		width: auto;
+		height: auto;
 		float: left;
 		position: relative;
 		z-index: 1;
@@ -975,8 +971,12 @@
 
 	div#right
 	{
-		display: none;
+		display: block;
+		width: auto;
+		height: auto;
+		float: left;
+		position: relative;
+		z-index: 1;
 	}
-	
 
 }
