Affinage de la recherche par types et maj du menu deroulant

--- a/src/app/pika/pika.component.scss
+++ b/src/app/pika/pika.component.scss
@@ -25,10 +25,9 @@ body {
 	position: relative;
 	width: auto;
 	margin: auto auto;
-	padding: auto;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	background-color: transparent;
 }
 
