--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -8,7 +8,6 @@
     </button>
   </div>
 </div>
-
 <div class="random" [hidden]="randomToClick">
   <div class="search" *ngIf="search !== ''">
     <div class="nombreResultat">
@@ -27,8 +26,8 @@
       />
     </section>
     <div class="buttonRecherche" *ngIf="length > 20">
-        <button (click)="incrementNumbers()"> afficher plus</button>
-        <button (click)="moins()"> afficher moins</button>
+      <button (click)="incrementNumbers()">afficher plus</button>
+      <button (click)="moins()">afficher moins</button>
     </div>
   </div>
 
@@ -46,37 +45,53 @@
       />
     </section>
     <div class="buttonAfficherPlusEtMoins">
-        <img src="../../assets/img/boutonplus.png" alt="Image cliquable" (click)="afficherPlus()">
-        <img src="../../assets/img/boutonmoins.png" alt="Image cliquable" (click)="afficherMoins()"><!-- <button (click)="afficherPlus()"> Afficher plus</button> -->
+      <img
+        src="../../assets/img/boutonplus.png"
+        alt="Image cliquable"
+        (click)="afficherPlus()"
+      />
+      <img
+        src="../../assets/img/boutonmoins.png"
+        alt="Image cliquable"
+        (click)="afficherMoins()"
+      /><!-- <button (click)="afficherPlus()"> Afficher plus</button> -->
     </div>
   </div>
 </div>
 
 <div class="ToClick" [hidden]="toClick">
-  <h1><b> Nom :</b> {{ infoAffichage.name }}</h1>
-  <img (click)="carteToClick()" src="{{ image }}/low.jpg" alt="" />
-  <div class="pokemonDetails">
-    <p *ngIf="infoAffichage.description">
-      <b>Déscription : </b> {{ infoAffichage.description }}
-    </p>
-    <p *ngIf="infoAffichage.evolveFrom">
-      <b> L'évolution de </b> {{ infoAffichage.evolveFrom }}
-    </p>
-    <p *ngIf="infoAffichage.hp">
-      <b> HP du pokemon :</b> {{ infoAffichage.hp }}
-    </p>
-    <p class="effect" *ngIf="infoAffichage.effect">
-      <b>Effet :</b> {{ infoAffichage.effect }}
-    </p>
-    <ul *ngFor="let types of infoAffichageType">
-      <li *ngIf="types"><b> Type du pokemon :</b> {{ types }}</li>
-    </ul>
-    <div class="attacks">
-      <ul *ngFor="let attacks of infoAffichageAttacks">
-        <li *ngIf="attacks.name"><b> Attaques :</b> {{ attacks.name }}</li>
-        <li *ngIf="attacks.damage"><b>Dommages :</b> {{ attacks.damage }}</li>
-        <li class="effect" *ngIf="attacks.effect"><b>Effet :</b> {{ attacks.effect }}</li>
-      </ul>
-    </div>
+  <div class="nom">
+    <h1><b> Nom :</b> {{ infoAffichage.name }}</h1>
   </div>
+  <section class="container">
+    <div class="picture">
+      <img (click)="carteToClick()" src="{{ image }}/low.jpg" alt="" />
+    </div>
+    <div class="pokemonDetails">
+      <p *ngIf="infoAffichage.description">
+        <b>Déscription : </b> {{ infoAffichage.description }}
+      </p>
+      <p *ngIf="infoAffichage.evolveFrom">
+        <b> L'évolution de </b> {{ infoAffichage.evolveFrom }}
+      </p>
+      <p *ngIf="infoAffichage.hp">
+        <b> HP du pokemon :</b> {{ infoAffichage.hp }}
+      </p>
+      <p class="effect" *ngIf="infoAffichage.effect">
+        <b>Effet :</b> {{ infoAffichage.effect }}
+      </p>
+      <ul *ngFor="let types of infoAffichageType">
+        <li *ngIf="types"><b> Type du pokemon :</b> {{ types }}</li>
+      </ul>
+      <div class="attacks">
+        <ul *ngFor="let attacks of infoAffichageAttacks">
+          <li *ngIf="attacks.name"><b> Attaques :</b> {{ attacks.name }}</li>
+          <li *ngIf="attacks.damage"><b>Dommages :</b> {{ attacks.damage }}</li>
+          <li class="effect" *ngIf="attacks.effect">
+            <b>Effet :</b> {{ attacks.effect }}
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
 </div>
