--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -1,6 +1,7 @@
 <section class="espace">
 
 </section>
+<section class="containpokedex">
 <div id="pokedex">
     <div id="left">
       <div id="logo"></div>
@@ -106,3 +107,4 @@
       <div id="curve2_right"></div>
     </div>
   </div>
+</section>
