--- a/src/app/formulaire/formulaire.component.css
+++ b/src/app/formulaire/formulaire.component.css
@@ -956,7 +956,18 @@
 	}
 
 }
+@media only screen and (max-width: 320px) {
+    #left {
+      width: 80%;
+    }
+    }
 
+	.containpokedex{
+		max-width: 90%;
+	
+	}
+	
+  
 @media handheld and (orientation:portrait), (max-width:768px) {
 
 div#right{
@@ -968,162 +979,16 @@ display: none;
 img{
 	size: 100%;
 }
-
 #left{
 	justify-content: center;
 	align-items: center;
 	size: 100%;
 };
-}
 
+
+}
 
  
 
  
-	/* * {
-		margin: 0;
-		padding: 0;
-		box-sizing: border-box;
-		font-family: 'Oxanium', cursive;
-	}
 	
-	body {
-		text-align: center;
-		background: linear-gradient(to bottom, #6ab7f5, #fff);
-		min-height: 100vh;
-	}
-	
-	main {
-		display: inline-block;
-		margin-top: 2%;
-		padding: 15px;
-		position: relative;
-	}
-	
-	.pokedex {
-		width: 100%;
-		max-width: 425px;
-	}
-	
-	.pokemon_image {
-		position: absolute;
-		bottom: 55%;
-		left: 50%;
-		transform: translate(-63%, 20%);
-		height: 18%;
-	}
-	
-	.pokemon_data {
-		position: absolute;
-		font-weight: 600;
-		color: #aaa;
-		top: 54.5%;
-		right: 27%;
-		font-size: clamp(8px, 5vw, 25px);
-	}
-	
-	.pokemon_name {
-		color: #3a444d;
-		text-transform: capitalize;
-	}
-	
-	.form {
-		position: absolute;
-		width: 65%;
-		top: 65%;
-		left: 13.5%;
-	}
-	
-	.input_search {
-		width: 100%;
-		padding: 4%;
-		outline: none;
-		border: 2px solid #333;
-		border-radius: 6px;
-		font-weight: 600;
-		color: #3a444d;
-		font-size: clamp(8px, 5vw, 1rem);
-		box-shadow: -3px 4px 0 #888, -5px 7px 0 #333;
-	}
-	
-	.buttons {
-		position: absolute;
-		bottom: 10%;
-		left: 50%;
-		width: 65%;
-		transform: translate(-57%, 0);
-		display: flex;
-		gap: 8%;
-	}
-	
-	.button {
-		width: 50%;
-		padding: 4%;
-		border: 2px solid #000;
-		border-radius: 5px;
-		font-size: clamp(8px, 5vw, 1rem);
-		font-weight: 600;
-		color: white;
-		background-color: #444;
-		box-shadow: -2px 3px 0 #222, -4px 6px 0 #000;
-	}
-	
-	.button:active {
-		box-shadow: inset -4px 4px #222;
-		font-size: 0.9rem;
-	}
-} */
-	/* div#pokedex
-	{
-		width: auto;
-		margin: auto;
-    display: flex;
-	justify-content: center;
-	}
-
-	div#logo
-	{
-		width: 281px;
-		height: 99px;
-		background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/200653/logo.png') no-repeat left top;
-		z-index: 1;
-
-		position: absolute;
-		top: 220px;
-		left: 30px;
-	}
-
-	div#left
-	{
-		width: 400px;
-		height: 500px;
-		float: left;
-		position: relative;
-		z-index: 1;
-	}
-
-	div#right
-	{
-		display: none;
-	}
-	
-
-}
-
-input, textarea {
-	border-width: 0;
-  }
-
-.name, .surname, .mail, .phone, .message{
-	padding-left: 2rem;
-	padding-top: 10px;
-	
-}
-
-
-  
-::placeholder {
-  color: #000;
-  font-family: Arial, Helvetica, sans-serif;
- font-size: 15px;
-}
