--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,7 +4,10 @@ div{
 }
 img{
     max-width: 100%;
-    height: auto;
+   
+    width: 100%;
+height: 100%;
+object-fit: contain;
 }
 a{
     max-width: 80%;
