maj select html et ts

--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -6,7 +6,7 @@
     <div class="types-select">
       <select (change)="selecteTypes($event.target)">
         <option value="">Sélectionnez un type</option>
-        <option *ngFor="let type of types; let i = index" (click)="selecteTypes(i)">{{ type }}</option>
+        <option *ngFor="let type of types; let i = index" >{{ type }}</option>
       </select>
     </div>
     <button class="types-button" *ngFor="let type of types; let i = index" (click)="selecteTypes(i)">
