--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -6,6 +6,7 @@
     <div class="types-select">
       <select (change)="selecteTypes($event.target)">
         <option value="">Sélectionnez un type</option>
+        <option (click)="returnAleatoire()">Aléatoire</option>
         <option *ngFor="let type of types; let i = index" >{{ type }}</option>
       </select>
     </div>
@@ -95,5 +96,4 @@
         </ul>
       </div>
     </div>
-  </section>
 </div>
