--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -4,8 +4,9 @@
   <div class="typesbar">
     <button (click)="returnAleatoire()">Aléatoire</button>
     <div class="types-select">
-      <select (change)="selecteTypes($event.target)">
+      <select (change)="selecteTypes2($event.target)">
         <option value="">Sélectionnez un type</option>
+        <option (click)="selecteTypes2($event.target)">Aléatoire</option>
         <option *ngFor="let type of types; let i = index" (click)="selecteTypes(i)">{{ type }}</option>
       </select>
     </div>
@@ -51,7 +52,7 @@
   </div>
 </div>
 
-<div class="ToClick" [hidden]="toClick">
+<div class="ToClick" *ngIf="toClick === true">
   <div class="nom" *ngIf="infoAffichage.name"><b> Nom :</b> {{ infoAffichage.name }}</div>
   <img (click)="carteToClick()" src="{{ image }}/low.jpg" alt="" />
   <div class="pokemonDetails">
