--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -182,7 +182,7 @@ button {
 }
 
 h1{
-    background-color: #e55366;
+    background-color: #3e4346;
     border: none;
     color: white;
     padding: 1vw 1vw;
